--- a/contacts.html
+++ b/contacts.html
@@ -35,6 +35,10 @@
     <input type="submit" name="">
   </form>
 
+  <br><br>
+
+  <input type="button" value="Geri dön" onclick="history.back()">
+
 </body>
 
 </html>
