--- a/hobbies.html
+++ b/hobbies.html
@@ -26,6 +26,11 @@
       TV
     </li>
   </ol>
+
+  <br>
+
+  <input type="button" value="Geri dön" onclick="history.back()">
+
 </body>
 
 </html>
