--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <h3><u>İş Deneyimlerim</u></h3>
 
 
-  <table border="1" cellspacing = "5">
+  <table border="1" cellspacing="5">
     <thead>
 
       <tr>
@@ -182,6 +182,12 @@
   <textarea rows="4" , cols="50">
 deneme
 </textarea>
+  <hr>
+  <video width="400" controls autoplay>
+    <source src="IMG_1197.mov" type="video/mp4" />
+
+    Tarayıcınız video etiketini desteklemiyor.
+  </video>
 
 </body>
 
