--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ deneme
 </textarea>
   <hr>
   <video width="400" controls autoplay>
-    <source src="v.1.0.0/IMG_1197.mov" type="video/mp4" />
+    <source src="https://github.com/alihansultan/cv/releases/download/v1.0.0/IMG_1197.MOV" type="video/mp4" />
 
     Tarayıcınız video etiketini desteklemiyor.
   </video>
