--- a/contacts.html
+++ b/contacts.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>İletişim Bilgilerim</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -22,7 +24,7 @@
 
   </ol>
   <br>
-  <hr noshade>
+  <hr >
   <br>
   <form action="mailto:alihansultan@gmail.com" method="post" enctype="text/plain">
     <label>Adınız:</label>
