--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>Alihan'ın Kişisel Sitesi</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body >
   <table cellspacing="20">
     <tr>
       <td>
@@ -27,7 +28,7 @@
 
 
   <br />
-  <hr noshade />
+  <hr  />
   <br />
   <h3><u>Gördüğüm Eğitimler</u></h3>
 
@@ -87,7 +88,7 @@
     </tbody>
   </table>
   <br />
-  <hr noshade />
+  <hr  />
   <h3>Yeteneklerim</h3>
   <table border="1" cellspacing="5">
     <tr>
@@ -184,7 +185,7 @@ deneme
 </textarea>
   <hr>
   <video width="400" controls autoplay>
-    <source src="https://github.com/alihansultan/cv/releases/download/v1.0.0/IMG_1197.MOV" type="video/mp4" />
+    <source src="IMG_1197.mov" type="video/mp4" />
 
     Tarayıcınız video etiketini desteklemiyor.
   </video>
